define projects anywhere; use local storage

--- a/config.json.example
+++ b/config.json.example
@@ -4,7 +4,7 @@
       "name" : "My first API dodumentation",
       "url": "apidoc-v1",
       "version" : "v1",
-      "specification" : "apidoc-v1.json"
+      "file" : "projects/dv-v1.json"
     }
   ]
 }
